SERVER-21554 Coverity analysis defect 76764: Macro compares unsigned to 0